name:                Samau
version:             0.1.0.0
synopsis:            A stack-based golfing language
description:         Please see README.md
homepage:            https://github.com/AlephAlpha/Samau#readme
license:             GPL
license-file:        LICENSE
author:              AlephAlpha
maintainer:          alephalpha911@gmail.com
copyright:           2017 AlephAlpha
category:            Langugage
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Samau.Eval
                     , Samau.Parser
                     , Samau.Repl
                     , Samau.Stack
                     , Samau.Types
  build-depends:       base >= 4.7 && < 5
                     , arithmoi
                     , containers
                     , haskeline
                     , megaparsec
                     , mtl
  default-language:    Haskell2010

executable samau
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , Samau
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AlephAlpha/Samau
